<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation"
    app:startDestination="@id/listaSaboresFragment">

    <fragment
        android:id="@+id/listaSaboresFragment"
        android:name="br.com.pedroferezin.recheiofacil.ui.ListaSaboresFragment"
        android:label="@string/sabores_de_pastel"
        tools:layout="@layout/fragment_lista_sabores">
        <action
            android:id="@+id/action_listaSaboresFragment_to_cadastroSaborFragment"
            app:destination="@id/cadastroSaborFragment" />
        <action
            android:id="@+id/action_listaSaboresFragment_to_edicaoSaborFragment"
            app:destination="@id/edicaoSaborFragment" />
        <action
            android:id="@+id/action_listaSaboresFragment_to_visualizacaoSaborFragment"
            app:destination="@id/visualizacaoSaborFragment" />
    </fragment>
    <fragment
        android:id="@+id/cadastroSaborFragment"
        android:name="br.com.pedroferezin.recheiofacil.ui.CadastroSaborFragment"
        android:label="@string/novo_sabor_de_pastel"
        tools:layout="@layout/fragment_cadastro_sabor" />
    <fragment
        android:id="@+id/edicaoSaborFragment"
        android:name="br.com.pedroferezin.recheiofacil.ui.EdicaoSaborFragment"
        android:label="@string/editar_sabor_de_pastel"
        tools:layout="@layout/fragment_edicao_sabor" />
    <fragment
        android:id="@+id/visualizacaoSaborFragment"
        android:name="br.com.pedroferezin.recheiofacil.ui.VisualizacaoSaborFragment"
        android:label="Visualizar sabor de pastel"
        tools:layout="@layout/fragment_visualizacao_sabor" />
</navigation>